k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: app-deployment
spec:
  replicas: 3
  selector:
    matchLabels: 
      component: app
  template:
    metadata:
      labels:
        component: app
    spec:
      containers:
        - image:  dipsprajapati/serviantechchallenge-app
          name: app
          args: ["serve"]
          ports:
            - containerPort: 3000
