k8s/app-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-cluster-ip-service
spec:
  selector:
    component: app
  type:  ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
