k8s/postgres-cluster-ip-service.yaml
kind: Service
apiVersion: v1
metadata:
  name:  postgres-cluster-ip-service
spec:
  selector:
    component: postgres
  type:  ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
